# torch-audit

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RULES.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: demo_accelerate.py  demo_cv.py  demo_general.py  demo_hf.py  demo_lightning.py  demo_nlp.py
scripts/: generate_rules.py
src/old_modules/: __init__.py
src/old_modules/cv/: images.py  layers.py
src/old_modules/general/: activations.py  gradients.py  graph.py  hardware.py  hygiene.py  optimizer_config.py  stability.py
src/old_modules/nlp/: structure.py  tokenization.py
src/torch_audit/: __init__.py  api.py  callbacks.py  cli.py  config.py  context.py  core.py  loader.py  registry.py  runner.py  runtime.py  validator.py
src/torch_audit/core/: __init__.py  auditor.py  config.py  issue.py  reporter.py  validator.py
src/torch_audit/modules/: __init__.py
src/torch_audit/modules/cv/: images.py  layers.py
src/torch_audit/modules/general/: activations.py  gradients.py  graph.py  hardware.py  hygiene.py  optimization.py  optimizer_config.py  stability.py
src/torch_audit/modules/nlp/: structure.py  tokenization.py
src/torch_audit/reporters/: console.py  json.py  sarif.py
src/torch_audit/utils/: fingerprints.py  sanitize.py  torch_safe.py
src/torch_audit/validators/builtin/: activation.py  architecture.py  data.py  graph.py  hardware.py  optimization.py  stability.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_core.py  test_loader.py  test_registry.py  test_runner.py  test_runtime.py  test_sanitize.py
tests/reporters/: test_console_reporter.py  test_json_reporter.py  test_sarif_reporter.py
tests/utils/: test_fingerprints.py  test_torch_safe.py
tests/validators/: test_architecture_validator.py  test_data_validator.py  test_hardware_validator.py  test_hardware_validator_extended.py  test_new_legacy_rules.py  test_optimization_validator.py  test_stability_validator.py  test_stateful_validators.py  test_validator_extended.py
