[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "torch-audit"
version = "0.2.0"
description = "The Linter for PyTorch: Detects silent training bugs."
authors = ["Roman Malkiv <malkiv.roman@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/RMalkiv/torch-audit"
homepage = "https://github.com/RMalkiv/torch-audit"
packages = [{include = "torch_audit", from = "src"}]

keywords = ["pytorch", "audit", "debugging", "linter", "deep-learning"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.0"
rich = ">=12.0.0"

# --- Optional Integrations ---
lightning = {version = ">=2.0.0", optional = true}
accelerate = {version = ">=0.20.0", optional = true}
transformers = {version = ">=4.30.0", optional = true}
datasets = {version = ">=2.10.0", optional = true}
numpy = {version = ">=1.20.0", optional = true}
torch = {version = "^2.5.1", source = "pytorch"}

[tool.poetry.extras]
lightning = ["lightning"]
hf = ["transformers", "accelerate", "datasets"]
all = ["lightning", "transformers", "accelerate", "datasets", "numpy"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
black = "^24.0"
ruff = "^0.6"
isort = "^5.0"
twine = "^4.0"
docutils = "<0.21"

[tool.poetry.scripts]
torch-audit = "torch_audit.cli:main"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py38"
src = ["src"]
fix = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "E501"
]